# cafe

./: README.md  db_insert.py  pyproject.toml  requirements.txt
app/: __init__.py
app/static/css/: main.css
app/templates/: index.html  storeDetail.html  storeList.html
app/views/: api.py  main.py  store.py
tests/: conftest.py
tests/views/: test_main.py
