[tool.poetry]
name = "cafe"
version = "0.1.0"
description = ""
authors = ["blueknarr <blueknarr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pymongo = "^3.11.4"
pytest = "^6.2.4"
python-dotenv = "^0.17.1"
pytest-flask = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
